# Ariel_CPP_basic_course_EX-6

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Champion.cpp  Champion.h  Champion.hpp  Coordinate.cpp  Coordinate.hpp  DummyPlayers.cpp  DummyPlayers.h  IllegalCharException.cpp  IllegalCharException.h  IllegalCharException.hpp  IllegalCoordinateException.cpp  IllegalCoordinateException.h  IllegalCoordinateException.hpp  Index.cpp  Index.hpp  Makefile  Player.h  TicTacToe.cpp  TicTacToe.h  TicTacToe.hpp  main.cpp  makefile  run
